--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,13 @@
     <div class="container">
         <nav>
             <h2>Home</h2>
-            <button>All Tasks</button>
-            <button>Today</button>
-            <button>This Week</button>
-            <button>Important</button>
+            <button><img src="<%= require('./Assets/icons/all-tasks.svg')%>" />All Tasks</button>
+            <button><img src="<%= require('./Assets/icons/today.svg')%>" />Today</button>
+            <button><img src="<%= require('./Assets/icons/week.svg')%>" />This Week</button>
+            <button><img src="<%= require('./Assets/icons/bookmark.svg')%>" />Important</button>
 
             <h2>Projects</h2>
-            <button id="project-add">Add Projects</button>
+            <button id="project-add"> <img src="<%= require('./Assets/icons/add.svg')%>" />Add Projects</button>
         </nav>
         <div class="content">
 
