--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <div class="navbar">
             <nav>
                 <h2>Home</h2>
-                <button><img src="<%= require('./Assets/icons/all-tasks.svg')%>" />All Tasks</button>
+                <button><img src="<%= require('./Assets/icons/all-tasks.svg')%>" />All Tasks </button>
                 <button><img src="<%= require('./Assets/icons/today.svg')%>" />Today</button>
                 <button><img src="<%= require('./Assets/icons/week.svg')%>" />This Week</button>
                 <button ><img src="<%= require('./Assets/icons/bookmark.svg')%>" />Important</button>
@@ -22,7 +22,7 @@
                 <button id="project-add"> <img src="<%= require('./Assets/icons/add.svg')%>" />Add Projects</button>
             </nav>
         </div>
-        <div class="content">
+        <div id="content">
 
         </div>
     </div>
