task Form with Functional Submit/Cancel Buttons

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,8 @@
             </nav>
         </div>
         <div id="content">
-
+            <div id="task-display"></div>
+            <div id="task-button-div"></div>
         </div>
     </div>
 </body>
