Today & All button Functional

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
         <div class="navbar">
             <nav>
                 <h2>Home</h2>
-                <button><img src="<%= require('./Assets/icons/all-tasks.svg')%>" />All Tasks </button>
-                <button><img src="<%= require('./Assets/icons/today.svg')%>" />Today</button>
+                <button id="all-tasks"><img src="<%= require('./Assets/icons/all-tasks.svg')%>" />All Tasks </button>
+                <button id="today"><img src="<%= require('./Assets/icons/today.svg')%>" />Today</button>
                 <button><img src="<%= require('./Assets/icons/week.svg')%>" />This Week</button>
                 <button ><img src="<%= require('./Assets/icons/bookmark.svg')%>" />Important</button>
             </nav>
