Home Nav Functional, Form Checking

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
                 <h2>Home</h2>
                 <button id="all-tasks"><img src="<%= require('./Assets/icons/all-tasks.svg')%>" />All Tasks </button>
                 <button id="today"><img src="<%= require('./Assets/icons/today.svg')%>" />Today</button>
-                <button><img src="<%= require('./Assets/icons/week.svg')%>" />This Week</button>
-                <button ><img src="<%= require('./Assets/icons/bookmark.svg')%>" />Important</button>
+                <button id="this-week"><img src="<%= require('./Assets/icons/week.svg')%>" />This Week</button>
+                <button id="bookmarked"><img src="<%= require('./Assets/icons/bookmark.svg')%>" />Important</button>
             </nav>
             <nav class="projects">
                 <h2>Projects</h2>
